resources/rainfall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rainfall-app
spec:
  selector:
    matchLabels:
      run: rainfall-app
  replicas: 3
  template:
    metadata:
      labels:
        run: rainfall-app
    spec:
      containers:
      - name: rainfall-app
        image: gcr.io/koverholt-apps/rainfall:1.9
        ports:
        - containerPort: 5000
