resources/default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-service
  labels:
    run: default-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    run: default-app
