resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "koverholt-apps-ip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: default-service
          servicePort: 8080
      - path: /rainfall/*
        backend:
          serviceName: rainfall-service
          servicePort: 5000
